src/main/java/com/example/productapi/error/Exception/BadRequestException.java
package com.example.productapi.error.Exception;

public class BadRequestException extends RuntimeException {
    
    public BadRequestException( String massage){
        super(massage);
    }
}
